Fixes checkout confirm view on safari

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
 
+  div:first-child {
+    -webkit-flex: 0;
+    flex-shrink: 0;
+  }
+
   &-order-details {
     padding-bottom: 40px;
     font-weight: 500;
